--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "hyperbolic-plane-tile-poc",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "typecheck": "tsc -p tsconfig.json",
-    "lint": "biome lint .",
-    "format": "biome format .",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
-  },
-  "devDependencies": {
-    "typescript": "^5.6.2",
-    "vitest": "^2.0.5",
-    "@vitest/coverage-v8": "^2.0.5",
-    "vite": "^5.4.6"
-  }
+    "name": "hyperbolic-plane-tile-poc",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "typecheck": "tsc -p tsconfig.json",
+        "lint": "biome lint .",
+        "format": "biome format --write .",
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "^2.2.2",
+        "@vitest/coverage-v8": "^2.0.5",
+        "typescript": "^5.6.2",
+        "vite": "^5.4.6",
+        "vitest": "^2.0.5"
+    }
 }
-
