--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^2.2.2",
+        "@fast-check/vitest": "^0.2.2",
         "@vitest/coverage-v8": "^2.0.5",
+        "fast-check": "^4.3.0",
         "typescript": "^5.6.2",
         "vite": "^5.4.6",
         "vitest": "^2.0.5"
