--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
     "devDependencies": {
         "@biomejs/biome": "^2.2.2",
         "@fast-check/vitest": "^0.2.2",
+        "@types/react": "^18.3.5",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^2.0.5",
         "fast-check": "^4.3.0",
+        "jsdom": "^27.0.0",
         "typescript": "^5.6.2",
         "vite": "^5.4.6",
         "vitest": "^2.0.5"
+    },
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
