--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "types": ["vitest/globals"]
+        "types": ["vitest/globals"],
+        "jsx": "react-jsx"
     },
     "include": ["src", "tests", "vite.config.ts", "vitest.config.ts"],
     "exclude": ["node_modules", "dist"]
