chore(biome): make > hyperbolic-plane-tile-poc@0.1.0 lint /home/soma/work/fms/hyperbolic-plane-tile-poc > biome check .
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 32.
Checked 39 files in 10ms. No fixes applied.
Found 35 errors.
Found 17 warnings.
 ELIFECYCLE  Command failed with exit code 1. run lint+format check via biome check (Refs #38)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "vite build",
         "preview": "vite preview",
         "typecheck": "tsc -p tsconfig.json",
-        "lint": "biome lint .",
+        "lint": "biome check .",
         "format": "biome format --write .",
         "test": "vitest",
         "test:sandbox": "vitest --run --pool=threads --poolOptions.threads.singleThread --no-file-parallelism",
