chore(lint): organize imports via Biome (Refs #54)

--- a/biome.json
+++ b/biome.json
@@ -11,5 +11,17 @@
         "rules": {
             "recommended": true
         }
-    }
+    },
+    "overrides": [
+        {
+            "includes": ["tests/acceptance/**"],
+            "linter": {
+                "rules": {
+                    "style": {
+                        "noNonNullAssertion": "off"
+                    }
+                }
+            }
+        }
+    ]
 }
