--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,5 @@ jobs:
       - name: Typecheck
         run: pnpm run typecheck
 
+      - name: Test (coverage v8)
+        run: pnpm run coverage
