chore(husky): run pnpm format on commit and restrict biome CI check to code/docs to avoid coverage noise (Refs #54)

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,14 @@
 {
     "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+    "files": {
+        "experimentalScannerIgnores": [
+            "coverage/**",
+            "node_modules/**",
+            "dist/**",
+            "build/**",
+            ".vite/**"
+        ]
+    },
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
