--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,12 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "types": ["vitest/globals"],
-        "jsx": "react-jsx"
+        "types": ["vitest/globals", "node"],
+        "jsx": "react-jsx",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
     "include": ["src", "tests", "vite.config.ts", "vitest.config.ts"],
     "exclude": ["node_modules", "dist"]
