fix(tests): update test script to run tests immediately

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "typecheck": "tsc -p tsconfig.json",
         "lint": "biome check .",
         "format": "biome check --write src tests ops docs ./*.md ./*.json",
-        "test": "vitest",
+        "test": "vitest --run",
+        "test:watch": "vitest",
         "test:sandbox": "vitest --run --pool=threads --poolOptions.threads.singleThread --no-file-parallelism",
         "coverage": "vitest run --coverage",
         "prepare": "husky",
