--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "test:watch": "vitest",
         "test:sandbox": "vitest --run --pool=threads --poolOptions.threads.singleThread --no-file-parallelism",
         "coverage": "vitest run --coverage",
+        "storybook": "storybook dev -p 6006",
+        "storybook:test": "test-storybook",
+        "build-storybook": "storybook build",
         "prepare": "husky",
         "ci": "pnpm biome:ci && pnpm typecheck && pnpm test:sandbox",
         "biome:ci": "biome ci .",
@@ -22,6 +25,13 @@
     "devDependencies": {
         "@biomejs/biome": "^2.2.2",
         "@fast-check/vitest": "^0.2.2",
+        "@storybook/addon-essentials": "8.1.8",
+        "@storybook/addon-interactions": "8.1.8",
+        "@storybook/react": "8.1.8",
+        "@storybook/react-vite": "8.1.8",
+        "@storybook/test": "8.1.8",
+        "@storybook/test-runner": "0.16.0",
+        "@storybook/testing-library": "0.2.2",
         "@types/node": "^24.5.2",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
@@ -31,6 +41,7 @@
         "husky": "^9.1.7",
         "jsdom": "^27.0.0",
         "lint-staged": "^16.1.6",
+        "storybook": "8.1.8",
         "typescript": "^5.6.2",
         "vite": "^5.4.6",
         "vitest": "^2.0.5"
