chore(repo): align test command references
Refs #102

--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
         "typecheck": "tsc -p tsconfig.json",
         "lint": "biome check .",
         "format": "biome check --write src tests ops docs ./*.md ./*.json",
-        "test": "vitest --run",
+        "test": "vitest --run --pool=threads --poolOptions.threads.singleThread --no-file-parallelism",
         "test:watch": "vitest",
-        "test:sandbox": "vitest --run --pool=threads --poolOptions.threads.singleThread --no-file-parallelism",
         "coverage": "vitest run --coverage",
         "storybook": "storybook dev -p 6006",
         "storybook:test": "test-storybook",
         "build-storybook": "storybook build",
         "prepare": "husky",
-        "ci": "pnpm biome:ci && pnpm typecheck && pnpm test:sandbox",
+        "ci": "pnpm biome:ci && pnpm typecheck && pnpm test",
         "biome:ci": "biome ci .",
         "biome:ci:code": "biome ci src tests ops docs ./*.md ./*.json"
     },
