--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "husky": "^9.1.7",
         "jsdom": "^27.0.0",
         "lint-staged": "^16.1.6",
+        "playwright": "^1.56.0",
         "storybook": "8.1.8",
         "typescript": "^5.6.2",
         "vite": "^5.4.6",
